# nidaq

./: .gitignore  LICENSE.txt  README.md  README.txt  pyproject.toml
examples/: pydaqmx-sample.py
examples/nidaqmx-c-api/CustomClockAnalogIOExample/: .gitignore  CustomClockAnalogIOExample.c  CustomClockAnalogIOExample.vcxproj
nidaq/: __init__.py  _version.py  nidaq.py
src/: nidaqmx-sample.py
src/nidaq/: __main__.py  code_tracking.py  nidaq.py
src/nidaq/cernox/: README.md  __init__.py  cernox.py
